--- a/public/css/pixyll.css
+++ b/public/css/pixyll.css
@@ -16,6 +16,8 @@
 
 */
 /* Basscss Base Buttons */
+
+
 button, .button { font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif; font-size: inherit; font-weight: normal; text-decoration: none; cursor: pointer; display: inline-block; box-sizing: border-box; line-height: 1.125rem; padding: 0.5rem 1rem; margin: 0; height: auto; border: 1px solid transparent; vertical-align: middle; -webkit-appearance: none; }
 
 ::-moz-focus-inner { border: 0; padding: 0; }
@@ -524,3 +526,10 @@ blockquote footer { background-color: #fff; border-color: transparent; color: #7
 .button-disabled { opacity: 0.55; background-color: #999; }
 
 .button-disabled:hover, .button-disabled:active, .button-disabled:focus { cursor: not-allowed; background-color: #999; }
+
+#centerContainer
+{
+  width: 50px;
+  height: 50px;
+  background-color: blue;
+}
