Made components to handle letters in about section

--- a/public/css/pixyll.css
+++ b/public/css/pixyll.css
@@ -38,7 +38,7 @@
   color:rgb(232, 192, 96);
   display:inline-block;
   font-family:CircularStd-Book, sans-serif;
-  font-size:25vw;
+  font-size:20vw;
   width: 100%;
   font-stretch:normal;
   font-style:normal;
@@ -60,6 +60,7 @@
   transform:matrix(1, 0, 0, 1, 0, 0);
   user-select:none;
   vertical-align:baseline;
+  overflow:hidden;
   -webkit-font-smoothing:antialiased;
 }
 button, .button { font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif; font-size: inherit; font-weight: normal; text-decoration: none; cursor: pointer; display: inline-block; box-sizing: border-box; line-height: 1.125rem; padding: 0.5rem 1rem; margin: 0; height: auto; border: 1px solid transparent; vertical-align: middle; -webkit-appearance: none; }
