Removed loading bar sphagetti code

--- a/public/css/pixyll.css
+++ b/public/css/pixyll.css
@@ -21,17 +21,17 @@
 
     display: block;
     height: 4px;
-    background-color: #dc6b6b;
+    background-color: white;
     box-shadow: 2px 0px 2px lightgreen;
     width: 100%;
     position:fixed;
     animation-name: example;
-    animation-duration: 0.4s;
+    animation-duration: 0.5s;
 }
 
 @keyframes example {
-  from {width: 0%;}
-  to {width: 100%;}
+  from {width: 0%;background-color: red}
+  to {width: 100%;background-color: white}
 }
 
 .hello {
